# .dotfiles

./: .bashrc  .editorconfig  .gitignore  .pre-commit-config.yaml  .xprofile  README.md  TODO.md  install  install.sh  pkglist.txt  pyproject.toml  requirements.txt  setup  stylua.toml  symlinks
.config/kitty/: HardcoreCustom.conf  kitty.conf
.config/neofetch/: config.conf
.config/nvim/: init.lua  lazy-lock.json
.config/nvim/ftplugin/: htmldjango.lua  lua.lua  python.lua
.config/picom/: picom.conf
.config/qtile/: config.py
.config/rofi/: arthur.rasi  config.rasi  frequencymenu.rasi  powermenu.rasi
.config/tmux/: tmux.conf
docs/: install.md  tmux.md  todo.md  tools.md
etc/: install.sh  packages-aur.txt  packages-pypi.txt  packages.txt  reflector.conf
etc/greeter/: greetd.conf  nwg-hello.css
etc/lightdm/: slick-greeter.conf
etc/pacman.d/hooks/: pkglist.hook
home/: .Xresources  .bash_aliases  .bash_completion  .bashrc  .gitconfig  .gitignore_global  .nanorc  .xprofile
home/.config/bash/: .bashrc  aliases.bash  completions.bash  env.bash
home/.config/dunst/: dunstrc  justfile  reload-dunstrc.bash  reload_config.sh
home/.config/fastfetch/: config.jsonc
home/dot-config/: locale.conf
home/notes/: TODO.md  gui-config.md  hardware-config.md  install.md  installation-guide.md  lspservers.md  tips.md  todo.md  tools.md
install/: symlinks  system-config.py  system-config.sh  system_config.py  user-config.py  user_config.py  utils.py
notes/: connect-wifi.md  gui-config.md  hardware-config.md  installation-guide.md  intallation-guide.md  libreoffice.md  pre-install.md  tips.md  tmux.md  usefull-config.md  uselfull-software.md
scripts/: repos  setup  slick_greeter_config  symlinks
system/: aur_pkglist.hook  aur_pkglist.txt  install.sh  pkglist.hook  pkglist.txt  reflector.conf  slick-greeter.conf
user/home/: .Xresources  .bash_aliases  .bash_completion  .bash_completions  .bashrc  .gitconfig  .gitignore_global  .xprofile
user/notes/: TODO.md  connect-wifi.md
(+221 files in other folders)
