[project]
requires-python = '>=3.12'


[tool.ruff]
line-length = 110
include = [
    '*.py',
    '*.pyi',
    '**/pyproject.toml',
    '**/bin/notes',
    '**/bin/view-images',
    '**/bin/mkvenv',
    '**/bin/toggle-touchpad-tapping',
]

[tool.ruff.format]
quote-style = 'single'
line-ending = 'lf'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'UP']


[tool.basedpyright]
include = [
    'home/.config/qtile',
    'home/bin',
]
# The default value excludes '**/.*', which prevents
# files in 'home/.config' from being type checked
exclude = [
    '**/__pycache__',
    '**/.venv',
    '**/.git',
    '**/.ruff_cache',
]
extraPaths = ['/usr/lib/python3.12/site-packages/']  # Use system python
typeCheckingMode = 'standard'
pythonVersion = '3.12'
pythonPlatform = 'Linux'
deprecateTypingAliases = true
# Avoid "'indentifier' not exported from 'module'" errors, see
# https://github.com/microsoft/pyright/issues/2277#issuecomment-937468789
reportPrivateImportUsage = false
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportConstantRedefinition = true
reportUnnecessaryComparison = true
reportIgnoreCommentWithoutRule = true
