[project]
requires-python = '>=3.12'


[tool.ruff]
line-length = 100
include = [
    '*.py',
    '*.pyi',
    '**/pyproject.toml',
]

[tool.ruff.format]
quote-style = 'single'
line-ending = 'lf'

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F', 'I', 'UP']


[tool.basedpyright]
typeCheckingMode = 'standard'
pythonVersion = '3.13'
pythonPlatform = 'Linux'
deprecateTypingAliases = true
# Avoid "'indentifier' not exported from 'module'" errors, see
# https://github.com/microsoft/pyright/issues/2277#issuecomment-937468789
reportPrivateImportUsage = false
reportMatchNotExhaustive = true
reportMissingParameterType = true
reportConstantRedefinition = true
reportUnnecessaryComparison = true
reportIgnoreCommentWithoutRule = true
